--- a/Full cms without design/webui/lmApp/src/index.html
+++ b/Full cms without design/webui/lmApp/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./cmsmain.component.css">
+  <link rel="stylesheet" type="text/css" href="./customer-login.component.css">
+  <link rel="stylesheet" type="text/css" href="./place-order.component.css">
+
 </head>
 <body>
   <app-root></app-root>
